// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Select default 1`] = `
.c0 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c0 .test__value-container,
.c0 .test__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c0 .test__single-value {
  color: rgb(0,130,155);
}

.c0 .test__indicator-separator {
  background-color: rgb(0,130,155);
}

.c0 .test__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c0 .test__control,
.c0 .test__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c0 .test__control:hover,
.c0 .test__menu:hover {
  border-color: rgb(65,178,180);
}

.c0 .test__option {
  background-color: transparent;
  cursor: pointer;
}

.c0 .test__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c0 .test__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c0 .test__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c0 .test__control--is-disabled {
  opacity: 0.7;
}

<div
  class="c0 css-2b097c-container"
  id="test"
>
  <div
    class="test__control css-yk16xz-control"
  >
    <div
      class="test__value-container test__value-container--has-value css-1hwfws3"
    >
      <div
        class="test__single-value css-1uccc91-singleValue"
      >
        Option one
      </div>
      <div
        class="css-1g6gooi"
      >
        <div
          class="test__input"
          style="display: inline-block;"
        >
          <input
            aria-autocomplete="list"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            id="react-select-4-input"
            spellcheck="false"
            style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
          <div
            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="test__indicators css-1wy0on6"
    >
      <span
        class="test__indicator-separator css-1okebmr-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        class="test__indicator test__dropdown-indicator css-tlfecz-indicatorContainer"
      >
        <svg
          aria-hidden="true"
          class="css-19bqh2r"
          focusable="false"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
          />
        </svg>
      </div>
    </div>
  </div>
  <input
    name="test"
    type="hidden"
    value="optionOne"
  />
</div>
`;

exports[`Storyshots Components/Select disabled 1`] = `
.c0 {
  font-family: "Monkirta",Helvetica,sans-serif;
  text-transform: uppercase;
  width: 100%;
}

.c0 .test__value-container,
.c0 .test__indicators {
  background-color: transparent;
  color: rgb(0,130,155);
  cursor: pointer;
}

.c0 .test__single-value {
  color: rgb(0,130,155);
}

.c0 .test__indicator-separator {
  background-color: rgb(0,130,155);
}

.c0 .test__dropdown-indicator > svg {
  fill: rgb(0,130,155);
}

.c0 .test__control,
.c0 .test__menu {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  padding: 0;
  color: rgb(0,130,155);
}

.c0 .test__control:hover,
.c0 .test__menu:hover {
  border-color: rgb(65,178,180);
}

.c0 .test__option {
  background-color: transparent;
  cursor: pointer;
}

.c0 .test__option:hover {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c0 .test__option--is-selected {
  background-color: rgb(0,130,155);
  color: rgb(234,242,246);
}

.c0 .test__option--is-selected:hover {
  background-color: rgb(0,130,155);
}

.c0 .test__control--is-disabled {
  opacity: 0.7;
}

<div
  class="c0 test--is-disabled css-14jk2my-container"
  id="test"
>
  <div
    class="test__control test__control--is-disabled css-1fhf3k1-control"
  >
    <div
      class="test__value-container test__value-container--has-value css-1hwfws3"
    >
      <div
        class="test__single-value test__single-value--is-disabled css-107lb6w-singleValue"
      >
        Option one
      </div>
      <div
        class="css-1g6gooi"
      >
        <div
          class="test__input"
          style="display: inline-block;"
        >
          <input
            aria-autocomplete="list"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            disabled=""
            id="react-select-5-input"
            spellcheck="false"
            style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
          <div
            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="test__indicators css-1wy0on6"
    >
      <span
        class="test__indicator-separator css-109onse-indicatorSeparator"
      />
      <div
        aria-hidden="true"
        class="test__indicator test__dropdown-indicator css-tlfecz-indicatorContainer"
      >
        <svg
          aria-hidden="true"
          class="css-19bqh2r"
          focusable="false"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <path
            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
